infrastructure/istio/overlay/korriban/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: public-gw
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.home.cwbtech.net"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.home.cwbtech.net"
      tls:
        mode: SIMPLE
        credentialName: istio-gw-tls
